# jae-semantic-mri

./: .gitignore  .zenodo.json  ACQUISITION_LOG.md  AUDIT_CONTEXT.md  CITATION.cff  DATA_SCHEMA.md  DEBUGGING_AUDIT_2026-03-22.md  PROJECT_STATE.md  REPO_KEEP_ARCHIVE_MAP.md  RESEARCH_LOG.md  SCHEMA_CONTRACT.json  config.py  data_tree_freeze.txt  main.py  pyproject.toml  repo_tree_focus.txt  repo_tree_full.txt  requirements-lock.txt
_FOR_NEXT_PHASE5_VALIDATION/: POST_PHASE5_VALIDATION_BUILD_REPORT.md  post_phase5_unittest_output.txt  post_phase5_validation.patch  proposed_metrics.py  test_post_phase5_validation.py
_backups/post_phase5_validation_20260319T190011Z/: Route_A_Modern.metrics.prepatch.npz  (+3 more)
audits/: FREEZE_AUDIT_2026-04-02_FULL_CORPUS.md  audit.md
bins/: __init__.py
docs/: ARCHITECTURE.md  AUDIT_CONTEXT.md  BETA_PILOT_EPOCH_PROTOCOL.md  DATA_SCHEMA.md  INTERPRETATION_GUIDELINES.md  LEGACY_ACQUISITION_BUILD_REPORT.md  LEGACY_ACQUISITION_FULL_BUILD_WALKTHROUGH.md  METHODS_PIPELINE.md  PHASE6_ANALYSIS_PLAN.md  RESEARCH_COMPLIANCE.md  SCHEMA_CONTRACT.json  audit.md
legacy_acquisition/: jae_legacy_acquisition_contract.py  jae_openalex_prefill_builder_v2.py  jae_prefill_downloader.py  jae_prefill_manifest_bridge.py  jae_prefill_promoter.py
scripts/: audit_entry.sh  compliance_check.sh  doc_check.sh  doctor.sh  finalize_audit_docs_closeout.sh  finalize_docs_architecture.sh  research_snapshot.sh  startup_check.sh  verify_audit_docs_closeout.sh  verify_docs_architecture.sh
tests/: test_benchmarks.py  test_section_exports.py  test_year_resolution.py
(+272 files in other folders)
